# chsc

./: .gitignore  GHC.hs  IGraph.hs  IdSupply.hs  Main.hs  Name.hs  Renaming.hs  StaticFlags.hs  Utilities.hs  supercompile.cabal  test-all
Core/: FreeVars.hs  Parser.hs  Prettify.hs  Renaming.hs  Size.hs  Syntax.hs  Tag.hs
Evaluator/: Deeds.hs  Evaluate.hs  Residualise.hs  Syntax.hs
Supercompile/: Drive.hs  Match.hs  Split.hs
Termination/: Extras.hs  Generaliser.hs  TagBag.hs  TagGraph.hs  TagSet.hs  Terminate.hs
cbits/: igraph.c
examples/neil/: SumSquare.core
