Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               supercompile
Version:            0.1
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/supercompile
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           Call-by-need supercompiler in Haskell
Category:           Language

Executable supercompile
    Main-Is:         Main.hs
    C-Sources:       cbits/igraph.c
    Include-Dirs:    /usr/local/include/igraph
    -- Extra-Lib-Dirs:  /usr/local/lib

    Build-Depends:
      array >= 0.5 && < 0.6,
      base >= 4.8,
      containers >= 0.5 && < 0.6,
      cpphs >= 1.11 && < 1.20,
      deepseq >= 1.4 && < 1.5,
      directory >= 1.0.1.0 && < 1.3,
      filepath >= 1.1.0.3 && < 1.5,
      graph-wrapper >= 0.2.3 && < 0.3,
      haskell-src-exts >= 1.16 && < 1.17,
      lattices >= 1.2 && < 1.3,
      pretty-class,
      process >= 1.0.1.2 && < 1.3,
      random >= 1.0 && < 1.1,
      time >= 1.5 && < 1.6
    Ghc-Options: -rtsopts

