cabal-version:      >= 1.10
build-type:         Simple
name:               supercompile
version:            0.1
maintainer:         Ömer Sinan Ağacan <oagacan@indiana.edu>
homepage:           https://github.com/osa1/chsc
license:            BSD3
license-file:       LICENSE
author:             Max Bolingbroke
synopsis:           Call-by-need supercompiler in Haskell
category:           Language

executable supercompile
    main-is:         Main.hs

    c-sources:       cbits/igraph.c
    extra-libraries: igraph
    cc-options:      -fPIC

    default-language:   Haskell2010
    default-extensions:
      BangPatterns
      DeriveGeneric
      FlexibleContexts
      StandaloneDeriving
      TupleSections
      ViewPatterns

    build-depends:
      array             >= 0.5 && < 0.6,
      base              >= 4.8 && < 4.9,
      containers        >= 0.5 && < 0.6,
      cpphs             >= 1.11 && < 1.20,
      deepseq           >= 1.4 && < 1.5,
      directory         >= 1.0.1.0 && < 1.3,
      filepath          >= 1.1.0.3 && < 1.5,
      graph-wrapper     >= 0.2.3 && < 0.3,
      haskell-src-exts  >= 1.16 && < 1.17,
      lattices          >= 1.2 && < 1.3,
      mtl,
      pointed,
      pretty-class,
      process           >= 1.0.1.2 && < 1.3,
      random            >= 1.0 && < 1.1,
      time              >= 1.5 && < 1.6,
      transformers

    ghc-options: -rtsopts
